# programa

./: .env.sample  .eslintrc.cjs  .gitignore  .node-version  README.md  biome.json  electron.vite.config.ts  eslint.config.mjs  index.html  package copy.json  package.json  pnpm-lock.yaml  process-env.d.ts  tsconfig.json  tsconfig.node.json  turbo.json
_designs/: Backup_of_pedido.cdr  pedido.cdr
apps/api/: .env  .env.example  .env.sample  .env.test  .gitignore  .node-version  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  server.ts  spectaql.yml  tsconfig.json  vitest.config.ts
apps/api/src/graphql/schema/menu/rust/: Cargo.toml  example_usage.rs  mod.rs  star_wars_example.rs
apps/api_rs/: .env  Cargo.toml  database.sqlite
apps/api_rs/_old/: server.rs
apps/api_rs/migration/: Cargo.toml
apps/api_rs/migration/src/: lib.rs  m20251119_030453_create_table_human.rs
apps/api_rs/src/: main-working.rs  main.rs
apps/api_rs/src/entity/: hobbit.rs  mod.rs  prelude.rs
apps/api_rs/src/graphql/: mod.rs
apps/api_rs/src/graphql/schema/: mod.rs
apps/api_rs/src/graphql/schema/hobbit/: mod.rs  operations.rs  types.rs
apps/api_rs/src/graphql/schema/human/: operations.rs  types.rs
apps/desktop/: .env  .eslintrc.cjs  codegen.ts  codegen.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  tsconfig.node.json  tsconfig.web.json
apps/desktop-tauri/: package.json
src/: App.tsx  ipcConnection.ts  styles.css
src-tauri/: tauri.conf.json
(+406 files in other folders)
