[package]
name = "api_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
rocket = "0.5.1"
juniper = "0.17.0"
juniper_rocket = "0.10.0"
sea-orm = { version = "1.1.17", features = [
  "sqlx-sqlite",
  "debug-print",
  "runtime-tokio-native-tls",
  "macros",
  "seaography",
  "with-json",
  "with-uuid",
] }
