[package]
name = "menu_schema"
version = "0.1.0"
edition = "2021"

[dependencies]
# GraphQL
juniper = "0.15"
juniper_warp = "0.7"

# Web framework
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[[bin]]
name = "server"
path = "server.rs"
